# mara-demo

asset-manager/: CMakeLists.txt
asset-manager/include/: asset_manager.h  compiler_fbx.h  compiler_png.h  compiler_sc.h  importwindow.h
asset-manager/runtime/: asset_manager.ini  shaderc.bat
asset-manager/src/: asset_manager.cpp  compiler_fbx.cpp  compiler_png.cpp  compiler_sc.cpp  importwindow.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
assets/meshes/: axe.fbx  katana.fbx
assets/shaders/mesh/: fs_mesh.sc  vs_mesh.sc
demo/: CMakeLists.txt
demo/src/: main.cpp
game/: CMakeLists.txt
game-compiler/: CMakeLists.txt
game-compiler/resources/: fs_cube.sc
game-compiler/resources/scene/: scene.mb
game-compiler/src/: compiler_fbx.cpp  compiler_fbx.h  main.cpp
game/resources/: fs_cube.sc
game/src/: main.cpp
pong/: CMakeLists.txt
pong/src/: main.cpp
resource-compiler/: CMakeLists.txt
resource-compiler/resources/: fs_cube.sc  vs_cube.sc
resource-compiler/resources/characters/: character.fbx  character.mb
resource-compiler/resources/characters/resources/: X Bot.fbx
resource-compiler/resources/scenes/: scene.fbx  scene.mb
resource-compiler/src/: main.cpp  ufbx.c
